# discordplex

./: .env.example  .gitignore  CLAUDE.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION.md  TESTING.md  pyproject.toml  requirements.txt
discordplex/: __main__.py  config.py
discordplex/audio/: converter.py  ode_to_joy.py  sink.py  source.py
discordplex/bot/: client.py  commands.py
discordplex/bridge/: session.py
discordplex/personaplex/: client.py  protocol.py
docs/: discordplex-plan.md
